--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,66 @@
-argcomplete==2.0.0
-Beaker==1.12.1
-beautifulsoup4==4.12.2
-blivet==3.7.1
-blivet-gui==2.4.1
-Brlapi==0.8.4
-Brotli==1.0.9
-cairocffi==1.3.0
-CairoSVG==2.7.0
-certifi==2022.9.24
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+bitarray==2.8.0
+certifi==2023.7.22
 cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-cryptography==37.0.2
-cssselect2==0.7.0
-cupshelpers==1.0
-dasbus==1.7
-dbus-python==1.3.2
-defusedxml==0.7.1
-distro==1.8.0
-fedora-third-party==0.10
-file-magic==0.4.0
-fros==1.1
-gbinder-python==1.1.1
-gpg==1.17.1
-humanize==3.13.1
+charset-normalizer==3.2.0
+contourpy==1.1.0
+cycler==0.11.0
+cytoolz==0.12.2
+eth-abi==4.1.0
+eth-account==0.9.0
+eth-hash==0.5.2
+eth-keyfile==0.6.1
+eth-keys==0.4.0
+eth-rlp==0.3.0
+eth-typing==3.4.0
+eth-utils==2.2.0
+exceptiongroup==1.1.2
+fonttools==4.41.1
+frozenlist==1.4.0
+h11==0.14.0
+hexbytes==0.3.1
 idna==3.4
-initial-setup==0.3.97
-langtable==0.0.62
-libcomps==0.1.18
-lxml==4.9.2
-Mako==1.2.3
-MarkupSafe==2.1.2
-mutagen==1.46.0
-nftables==0.1
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.4
+lru-dict==1.2.0
+matplotlib==3.7.2
+multidict==6.0.4
 numpy==1.25.1
-olefile==0.46
-onboard==1.4.1
-packaging==23.0
-Paste==3.5.2
-pexpect==4.8.0
-pid==2.2.3
-Pillow==9.4.0
-ply==3.11
-powerline-status==2.8.3
-productmd==1.35
-psutil==5.9.2
-ptyprocess==0.7.0
-pwquality==1.4.5
-pycairo==1.23.0
-pyclip==0.7.0
-pycparser==2.20
-pycrypto==2.6.1
-pycryptodomex==3.17.0
-pycups==2.0.1
-pycurl==7.45.2
-pyenchant==3.2.2
-pygit2==1.12.2
-PyGObject==3.44.1
-pyinotify==0.9.6
-pykickstart==3.47
-pyOpenSSL==21.0.0
-pyparted==3.12.0
+outcome==1.2.0
+packaging==23.1
+pandas==2.0.3
+parsimonious==0.9.0
+Pillow==10.0.0
+protobuf==4.23.4
+pycparser==2.21
+pycryptodome==3.18.0
+pyparsing==3.0.9
 PySocks==1.7.1
-pystray==0.17.3
-python-augeas==1.1.0
 python-dateutil==2.8.2
-python-gettext==4.0
-python-manatools==0.0.4
-python-meh==0.51
-python-pam==2.0.2
-python-xlib==0.33
+python-dotenv==1.0.0
 pytz==2023.3
-pyudev==0.24.0
-pyxdg==0.27
-PyYAML==6.0
-regex==2022.10.31
-requests==2.28.2
-requests-file==1.5.1
-requests-ftp==0.3.1
-rpm==4.18.1
-selinux==3.5
-sepolicy==3.5
-setools==4.4.2
-setproctitle==1.2.3
-setroubleshoot==3.3.32
-simpleaudio==1.0.4
-simpleline==1.9.0
+pyunormalize==15.0.0
+pywin32==306
+referencing==0.30.0
+regex==2023.6.3
+requests==2.31.0
+rlp==3.0.0
+rpds-py==0.9.2
+selenium==4.10.0
 six==1.16.0
-sos==4.5.1
-soupsieve==2.4.1
-systemd-python==235
-Tempita==0.5.2
-termcolor==2.3.0
-tinycss2==1.2.1
-urllib3==1.26.16
-webencodings==0.5.1
-websockets==10.4
-xcffib==1.2.0
-xlrd==2.0.1
-yt-dlp==2023.7.6
+sniffio==1.3.0
+sortedcontainers==2.4.0
+toolz==0.12.0
+trio==0.22.2
+trio-websocket==0.10.3
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+web3==6.6.1
+websockets==11.0.3
+wsproto==1.2.0
+yarl==1.9.2
